--- a/manifests/elasticgpu.io_gpus.yaml
+++ b/manifests/elasticgpu.io_gpus.yaml
@@ -35,6 +35,20 @@ spec:
             properties:
               index:
                 type: integer
+              links:
+                items:
+                  properties:
+                    index:
+                      type: integer
+                    types:
+                      items:
+                        type: string
+                      type: array
+                  required:
+                  - index
+                  - types
+                  type: object
+                type: array
               memory:
                 format: int64
                 type: integer
